# xcx

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/xcx/: Cargo.toml  LICENSE-MIT  NOTICE  README.md
crates/xcx-validation/: Cargo.toml  README.md
crates/xcx-validation/python/: gen_scf_ref.py
crates/xcx-validation/src/: ffi.rs  lib.rs
crates/xcx-validation/testdata/: README.md  gga_c_lyp.json  gga_c_p86.json  gga_c_pbe.json  gga_c_pbe_sol.json  gga_x_b88.json  gga_x_pbe.json  gga_x_pbe_r.json  gga_x_pbe_sol.json  gga_x_rpbe.json  gga_xc_b97_3c.json  hyb_gga_xc_b2plyp.json  hyb_gga_xc_b3lyp.json  hyb_gga_xc_b3lyp5.json  hyb_gga_xc_pbeh.json  hyb_gga_xc_pbeh_3c.json  hyb_gga_xc_revdsd_pbep86_d4.json  hyb_gga_xc_wb97x_v.json  hyb_mgga_x_m06_2x.json  hyb_mgga_xc_pw6b95.json  hyb_mgga_xc_pwpb95.json  hyb_mgga_xc_wb97m_2.json  hyb_mgga_xc_wb97m_v.json  lda_c_pw.json  lda_c_vwn.json  lda_c_vwn_3.json  lda_c_vwn_rpa.json  lda_x.json  mgga_c_m06_2x.json  mgga_c_m06_l.json  mgga_c_r2scan.json  mgga_c_tpss.json  mgga_x_m06_l.json  mgga_x_r2scan.json  mgga_x_tpss.json  mgga_xc_b97m_v.json  scf_grid_h2o_b3lyp.json  scf_grid_oh_b3lyp.json
crates/xcx-validation/testdata/constructor/: hyb_gga_xc_b97.json
crates/xcx-validation/testdata/scf/: h2o_b3lyp.scalars.json  oh_b3lyp.scalars.json
crates/xcx-validation/tests/: constructor.rs  golden.rs
crates/xcx/src/: error.rs  func.rs  io.rs  lib.rs
crates/xcx/src/families/: gga.rs  lda.rs  mgga.rs  mod.rs
crates/xcx/src/functionals/: attenuation.rs  gga_c_lyp.rs  gga_c_p86.rs  gga_c_pbe.rs  gga_c_pbe_sol.rs  gga_x_b88.rs  gga_x_pbe.rs  gga_x_pbe_r.rs  gga_x_pbe_sol.rs  gga_x_rpbe.rs  gga_xc_b97.rs  hyb_gga_xc_wb97x_v.rs  hyb_mgga_x_m06_2x.rs  hyb_mgga_xc_pw6b95.rs  hyb_mgga_xc_pwpb95.rs  hyb_mgga_xc_wb97m_2.rs  hyb_mgga_xc_wb97m_v.rs  hybrids.rs  lda_c_pw.rs  lda_c_vwn.rs  lda_c_vwn_3.rs  lda_c_vwn_rpa.rs  lda_x.rs  mgga_c_m06_2x.rs  mgga_c_m06_l.rs  mgga_c_r2scan.rs  mgga_c_tpss.rs  mgga_x_m06_l.rs  mgga_x_r2scan.rs  mgga_x_tpss.rs  mgga_xc_b97mv.rs  mod.rs
crates/xcx/src/reduced/: consts.rs  mod.rs  vars.rs
crates/xcx/tests/: fuzz.rs  fxc.rs
docs/: api-convention.md
