[workspace]
resolver = "2"
members = ["crates/xcx", "crates/xcx-validation"]

[workspace.package]
edition = "2021"
rust-version = "1.87"
license = "MPL-2.0"
authors = ["Jiekang Tian"]
repository = "https://github.com/nmrtist/xcx"
homepage = "https://github.com/nmrtist/xcx"

[workspace.dependencies]
# Forward-mode automatic differentiation (pure Rust, MIT OR Apache-2.0).
num-dual = "0.13"
nalgebra = "0.34"
# Dev / test only.
approx = "0.5"
rand = "0.8"

# Optimize the math-heavy crate even in dev for tolerable test runtimes.
[profile.dev.package.xcx]
opt-level = 2
