[package]
name = "xcx"
version = "0.3.1"
description = "Exchange–correlation functionals for DFT in pure Rust — autodiff derivatives (vxc/fxc), double hybrids, libxc-interoperable ids"
keywords = ["dft", "quantum-chemistry", "libxc", "physics", "chemistry"]
categories = ["science", "mathematics"]
readme = "README.md"
documentation = "https://docs.rs/xcx"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
num-dual.workspace = true
nalgebra.workspace = true
libm.workspace = true

[dev-dependencies]
approx.workspace = true
rand.workspace = true
